--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,7 @@
     "@mantine/hooks": "^5.10.4",
     "@mantine/next": "^5.10.4",
     "@next/font": "13.1.6",
+    "@prisma/client": "4.10.1",
     "@tabler/icons-react": "^2.4.0",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
@@ -25,5 +26,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "prisma": "^4.10.1"
   }
 }
