--- a/src/package.json
+++ b/src/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
@@ -31,6 +34,7 @@
     "zod": "^3.20.6"
   },
   "devDependencies": {
-    "prisma": "^4.10.1"
+    "prisma": "^4.10.1",
+    "ts-node": "^10.9.1"
   }
 }
