--- a/src/package.json
+++ b/src/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-mask": "^1.1.11",
     "typescript": "4.9.5",
     "zod": "^3.20.6"
   },
