--- a/src/package.json
+++ b/src/package.json
@@ -20,12 +20,14 @@
     "@next/font": "13.1.6",
     "@prisma/client": "4.10.1",
     "@tabler/icons-react": "^2.4.0",
+    "@types/formidable": "^2.0.5",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "bcryptjs": "^2.4.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "formidable": "^2.1.1",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
     "nodemailer": "^6.9.1",
