--- a/src/package.json
+++ b/src/package.json
@@ -38,6 +38,7 @@
     "zod": "^3.20.6"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "prisma": "^4.10.1",
     "ts-node": "^10.9.1"
   }
