--- a/src/package.json
+++ b/src/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/nodemailer": "^6.4.7",
     "prisma": "^4.10.1",
     "ts-node": "^10.9.1"
   }
