--- a/src/package.json
+++ b/src/package.json
@@ -28,6 +28,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "formidable": "^2.1.1",
+    "intl": "^1.2.5",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
     "nodemailer": "^6.9.1",
