--- a/src/package.json
+++ b/src/package.json
@@ -20,11 +20,13 @@
     "@next/font": "13.1.6",
     "@prisma/client": "4.10.1",
     "@tabler/icons-react": "^2.4.0",
+    "@types/content-disposition": "^0.5.5",
     "@types/formidable": "^2.0.5",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "bcryptjs": "^2.4.3",
+    "content-disposition": "^0.5.4",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "formidable": "^2.1.1",
