--- a/src/package.json
+++ b/src/package.json
@@ -18,6 +18,7 @@
     "@mantine/hooks": "^5.10.4",
     "@mantine/next": "^5.10.4",
     "@next/font": "13.1.6",
+    "@pdfme/generator": "^1.1.5",
     "@prisma/client": "4.10.1",
     "@tabler/icons-react": "^2.4.0",
     "@types/content-disposition": "^0.5.5",
