--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,14 +1,14 @@
 version: '3.9'
 
 networks:
-  tt_prod_net:
+  tt_test_net:
   traefik_proxy_network:
      external: true
 
 services:
   db:
     image: mysql:8
-    container_name: tt_prod_db
+    container_name: tt_test_db
     labels:
       - docker-volume-backup.archive-pre=/bin/sh -c '/usr/bin/mysqldump -uroot -pQMPDIw9ZbOqb27mkn928+9e5ArOMC3dA tt > /tmp/file_storage/tt.sql'
     restart: always
@@ -25,11 +25,11 @@ services:
       - MYSQL_PASSWORD=${MYSQL_TT_PASSWORD}
       - MYSQL_DATABASE=tt
     networks:
-      - tt_prod_net
+      - tt_test_net
 
   yarn:
     image: node:16.13.0
-    container_name: tt_prod_yarn
+    container_name: tt_test_yarn
     depends_on:
       - db
     expose:
@@ -46,14 +46,14 @@ services:
       - "traefik.http.middlewares.www-redirect.redirectregex.regex=^(https?://)www.(.*)$$"
       - "traefik.http.middlewares.www-redirect.redirectregex.replacement=$${1}$${2}"
       - "traefik.http.middlewares.www-redirect.redirectregex.permanent=true"
-      - "traefik.http.routers.tt_prod.rule=Host(`test.superduperbilet.site`) || Host(`www.test.superduperbilet.site`)"
-      # - "traefik.http.routers.tt_prod.rule=Host(`test.superduperbilet.site`)"
-      - "traefik.http.routers.tt_prod.entrypoints=websecure"
-      - "traefik.http.routers.tt_prod.tls.certresolver=myresolver"
-      - "traefik.http.routers.tt_prod.middlewares=www-redirect"
+      - "traefik.http.routers.tt_test.rule=Host(`test.superduperbilet.site`) || Host(`www.test.superduperbilet.site`)"
+      # - "traefik.http.routers.tt_test.rule=Host(`test.superduperbilet.site`)"
+      - "traefik.http.routers.tt_test.entrypoints=websecure"
+      - "traefik.http.routers.tt_test.tls.certresolver=myresolver"
+      - "traefik.http.routers.tt_test.middlewares=www-redirect"
       - "traefik.docker.network=traefik_proxy_network"
     networks:
-      - tt_prod_net
+      - tt_test_net
       - traefik_proxy_network
 
 volumes:
