--- a/src/.env.sample
+++ b/src/.env.sample
@@ -1,16 +1,18 @@
-# This was inserted by `prisma init`:
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+DATABASE_URL="mysql://user:password@db_servide/db_name?schema=public"
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+NEXTAUTH_SECRET="secret string"
+NEXTAUTH_URL="https://superduperbilet.site"
 
-DATABASE_URL="mysql://username:password@db/dbname?schema=public"
+NEXT_PUBLIC_GOODNESS_PRICE=2500
+TICKET_SECRET="shhh keep it quiet!"
 
-NEXTAUTH_SECRET="supersecret1"
-NEXTAUTH_URL="https://test.test"
-
-MAIL_HOST="smtp.***"
+MAIL_HOST="smtp.yandex.ru"
 MAIL_PORT=465
-MAIL_USER="test@test.test"
-MAIL_PASSWORD="password"
+MAIL_USER="test@smtp.server"
+MAIL_PASSWORD="smtp user password"
+
+DEFAULT_ADMIN_PASSWORD="secret"
+
+LOCAL_FILE_STORAGE="/var/www/file_storage"
+
+FEST_TITLE="Фест 2023"
