--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
     "@tabler/icons-react": "^2.4.0",
     "@types/content-disposition": "^0.5.5",
     "@types/formidable": "^2.0.5",
+    "@types/mime-types": "^2.1.1",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -32,6 +33,7 @@
     "eslint-config-next": "13.1.6",
     "formidable": "^2.1.1",
     "intl": "^1.2.5",
+    "mime-types": "^2.1.35",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
     "nodemailer": "^6.9.1",
