--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,7 @@
     "@mantine/core": "^5.10.4",
     "@mantine/hooks": "^5.10.4",
     "@mantine/next": "^5.10.4",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.1.6",
     "@pdfme/generator": "^1.1.5",
     "@prisma/client": "4.10.1",
