--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -48,10 +48,10 @@ services:
       - "traefik.http.middlewares.www-redirect.redirectregex.regex=^(https?://)www.(.*)$$"
       - "traefik.http.middlewares.www-redirect.redirectregex.replacement=$${1}$${2}"
       - "traefik.http.middlewares.www-redirect.redirectregex.permanent=true"
-      - "traefik.http.routers.tt.rule=Host(`ticket.otaku.ru`) || Host(`www.ticket.otaku.ru`)"
-      - "traefik.http.routers.tt.entrypoints=websecure"
-      - "traefik.http.routers.tt.tls.certresolver=myresolver"
-      - "traefik.http.routers.tt.middlewares=www-redirect"
+      - "traefik.http.routers.tt_prod.rule=Host(`ticket.otaku.ru`) || Host(`www.ticket.otaku.ru`)"
+      - "traefik.http.routers.tt_prod.entrypoints=websecure"
+      - "traefik.http.routers.tt_prod.tls.certresolver=myresolver"
+      - "traefik.http.routers.tt_prod.middlewares=www-redirect"
       - "traefik.docker.network=traefik_proxy_network"
 
     networks:
