--- a/src/package.json
+++ b/src/package.json
@@ -25,6 +25,7 @@
     "@react-email/container": "0.0.8",
     "@react-email/hr": "0.0.5",
     "@react-email/html": "0.0.4",
+    "@react-email/render": "0.0.6",
     "@tabler/icons-react": "^2.4.0",
     "@types/content-disposition": "^0.5.5",
     "@types/formidable": "^2.0.5",
