--- a/src/package.json
+++ b/src/package.json
@@ -27,6 +27,11 @@
     "@react-email/html": "0.0.4",
     "@react-email/render": "0.0.6",
     "@tabler/icons-react": "^2.4.0",
+    "@tanstack/react-query": "^4.28.0",
+    "@trpc/client": "^10.17.0",
+    "@trpc/next": "^10.17.0",
+    "@trpc/react-query": "^10.17.0",
+    "@trpc/server": "^10.17.0",
     "@types/content-disposition": "^0.5.5",
     "@types/formidable": "^2.0.5",
     "@types/mime-types": "^2.1.1",
