--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -16,6 +16,7 @@ services:
     #      - "3306:3306"
     volumes:
       - ./mysql:/var/lib/mysql
+      - ./mysql-files:/var/lib/mysql-files
       - file_storage:/tmp/file_storage
 
     environment:
