--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: '3.9'
 
 networks:
-  tt_prod_net:
+  tt_net:
   traefik_proxy_network:
      external: true
 
 services:
   db:
     image: mysql:8
-    container_name: tt_prod_db
+    container_name: tt_db
     labels:
-      - docker-volume-backup.archive-pre=/bin/sh -c '/usr/bin/mysqldump -uroot -p${MYSQL_ROOT_PASSWORD} tt > /tmp/file_storage/tt.sql'
+      - docker-volume-backup.archive-pre=/bin/sh -c '/usr/bin/mysqldump -uroot -pQMPDIw9ZbOqb27mkn928+9e5ArOMC3dA tt > /tmp/file_storage/tt.sql'
     restart: always
     #    ports:
     #      - "3306:3306"
@@ -25,11 +25,11 @@ services:
       - MYSQL_PASSWORD=${MYSQL_TT_PASSWORD}
       - MYSQL_DATABASE=tt
     networks:
-      - tt_prod_net
+      - tt_net
 
   yarn:
     image: node:16.13.0
-    container_name: tt_prod_yarn
+    container_name: tt_yarn
     depends_on:
       - db
     expose:
@@ -39,8 +39,6 @@ services:
       - file_storage:/var/www/file_storage
     working_dir: /var/www/html
     entrypoint: ['yarn']
-    command: "start"
-    restart: always
     environment:
       - TZ=Europe/Moscow
     labels:
@@ -48,14 +46,15 @@ services:
       - "traefik.http.middlewares.www-redirect.redirectregex.regex=^(https?://)www.(.*)$$"
       - "traefik.http.middlewares.www-redirect.redirectregex.replacement=$${1}$${2}"
       - "traefik.http.middlewares.www-redirect.redirectregex.permanent=true"
-      - "traefik.http.routers.tt_prod.rule=Host(`ticket.otaku.ru`) || Host(`www.ticket.otaku.ru`)"
-      - "traefik.http.routers.tt_prod.entrypoints=websecure"
-      - "traefik.http.routers.tt_prod.tls.certresolver=myresolver"
-      - "traefik.http.routers.tt_prod.middlewares=www-redirect"
+      - "traefik.http.routers.tt.rule=Host(`superduperbilet.site`) || Host(`www.superduperbilet.site`)"
+      # - "traefik.http.routers.tt.rule=Host(`superduperbilet.site`)"
+      - "traefik.http.routers.tt.entrypoints=websecure"
+      - "traefik.http.routers.tt.tls.certresolver=myresolver"
+      - "traefik.http.routers.tt.middlewares=www-redirect"
       - "traefik.docker.network=traefik_proxy_network"
 
     networks:
-      - tt_prod_net
+      - tt_net
       - traefik_proxy_network
 
   backup:
@@ -64,7 +63,7 @@ services:
     # Check https://github.com/offen/docker-volume-backup/releases
     # for a list of available releases.
     image: offen/docker-volume-backup:v2.20.0
-    container_name: tt_prod_backup
+    container_name: tt_backup
     restart: always
     environment:
       BACKUP_FILENAME: backup-%Y-%m-%dT%H-%M-%S.tar.gz
@@ -72,7 +71,7 @@ services:
       BACKUP_RETENTION_DAYS: 7
     #    env_file: ./backup.env # see below for configuration reference
     networks:
-      - tt_prod_net
+      - tt_net
     volumes:
       - file_storage:/backup/tt:ro
       # Mounting the Docker socket allows the script to stop and restart
