--- a/src/package.json
+++ b/src/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -36,15 +36,15 @@
     "bcryptjs": "^2.4.3",
     "content-disposition": "^0.5.4",
     "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
+    "eslint-config-next": "^13.4.5",
     "formidable": "^2.1.1",
     "intl": "^1.2.5",
     "mime-types": "^2.1.35",
-    "next": "13.1.6",
+    "next": "^13.4.5",
     "next-auth": "^4.19.2",
     "nodemailer": "^6.9.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-email": "1.7.15",
     "react-hook-mask": "^1.1.11",
     "typescript": "4.9.5",
