--- a/src/package.json
+++ b/src/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -41,7 +41,7 @@
     "intl": "^1.2.5",
     "mime-types": "^2.1.35",
     "next": "^13.4.5",
-    "next-auth": "^4.19.2",
+    "next-auth": "^4.22.1",
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
