--- a/src/package.json
+++ b/src/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -27,6 +27,11 @@
     "@react-email/html": "0.0.4",
     "@react-email/render": "0.0.6",
     "@tabler/icons-react": "^2.4.0",
+    "@tanstack/react-query": "^4.29.12",
+    "@trpc/client": "^10.30.0",
+    "@trpc/next": "^10.30.0",
+    "@trpc/react-query": "^10.30.0",
+    "@trpc/server": "^10.30.0",
     "@types/content-disposition": "^0.5.5",
     "@types/formidable": "^2.0.5",
     "@types/mime-types": "^2.1.1",
@@ -48,7 +53,7 @@
     "react-email": "1.7.15",
     "react-hook-mask": "^1.1.11",
     "typescript": "4.9.5",
-    "zod": "^3.20.6"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
