--- a/src/package.json
+++ b/src/package.json
@@ -31,8 +31,8 @@
     "@types/formidable": "^2.0.5",
     "@types/mime-types": "^2.1.1",
     "@types/node": "18.13.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
     "bcryptjs": "^2.4.3",
     "content-disposition": "^0.5.4",
     "eslint": "8.34.0",
