--- a/src/package.json
+++ b/src/package.json
@@ -21,7 +21,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.1.6",
     "@pdfme/generator": "^1.1.5",
-    "@prisma/client": "4.10.1",
+    "@prisma/client": "^4.15.0",
     "@react-email/container": "0.0.8",
     "@react-email/hr": "0.0.5",
     "@react-email/html": "0.0.4",
@@ -53,7 +53,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/nodemailer": "^6.4.7",
-    "prisma": "^4.10.1",
+    "prisma": "^4.15.0",
     "ts-node": "^10.9.1"
   }
 }
