--- a/src/package.json
+++ b/src/package.json
@@ -46,7 +46,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-email": "1.7.15",
-    "react-hook-mask": "^1.1.11",
+    "react-imask": "^6.6.3",
     "typescript": "4.9.5",
     "zod": "^3.20.6"
   },
