--- a/src/package.json
+++ b/src/package.json
@@ -21,10 +21,12 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@pdfme/generator": "^1.1.5",
     "@prisma/client": "^4.15.0",
+    "@react-email/body": "0.0.2",
     "@react-email/container": "0.0.8",
     "@react-email/hr": "0.0.5",
     "@react-email/html": "0.0.4",
-    "@react-email/render": "0.0.6",
+    "@react-email/render": "0.0.7",
+    "@react-email/tailwind": "0.0.8",
     "@tabler/icons-react": "^2.4.0",
     "@types/content-disposition": "^0.5.5",
     "@types/formidable": "^2.0.5",
@@ -44,7 +46,7 @@
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-email": "1.7.15",
+    "react-email": "^1.9.4",
     "react-imask": "^6.6.3",
     "typescript": "4.9.5",
     "zod": "^3.20.6"
